pdf correction justify / external link check internet connection